parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> ProgramHeader ProgramBody
Rule 2     ProgramHeader -> PROGRAM ID ;
Rule 3     ProgramBody -> FuncDecls VarDecls Cmds
Rule 4     FuncDecls -> empty
Rule 5     FuncDecls -> Function FuncDecls
Rule 6     Function -> FunctionHeader
Rule 7     Function -> FunctionBody
Rule 8     FunctionHeader -> FunctionType FUNCTION ID ( ParamList ) :
Rule 9     FunctionType -> INTEGER
Rule 10    FunctionType -> BOOL
Rule 11    FunctionType -> VOID
Rule 12    FunctionBody -> { VarDecls CmdList }
Rule 13    ParamList -> empty
Rule 14    ParamList -> ParamList1
Rule 15    ParamList1 -> Param , ParamList1
Rule 16    ParamList1 -> Param
Rule 17    Param -> ID : Type
Rule 18    Cmds -> CmdSeq
Rule 19    Cmds -> Cmd
Rule 20    Cmd -> CmdAtrib
Rule 21    Cmd -> CmdIf
Rule 22    Cmd -> CmdWhile
Rule 23    Cmd -> CmdFor
Rule 24    Cmd -> CmdBreak
Rule 25    Cmd -> CmdPrint
Rule 26    Cmd -> CmdReturn
Rule 27    Cmd -> CmdSeq
Rule 28    CmdAtrib -> ID = Expr
Rule 29    CmdIf -> IF Expr : Cmd
Rule 30    CmdIf -> IF Expr : Cmd ELSE :
Rule 31    CmdWhile -> WHILE Expr : Cmds
Rule 32    CmdFor -> FOR CmdAtrib TO Expr : Cmd
Rule 33    CmdBreak -> BREAK
Rule 34    CmdPrint -> PRINT ( ExprList )
Rule 35    CmdReturn -> RETURN Expr
Rule 36    CmdSeq -> { CmdList }
Rule 37    CmdList -> Cmd ; CmdList
Rule 38    CmdList -> Cmd
Rule 39    Expr -> INT
Rule 40    Expr -> TRUE
Rule 41    Expr -> FALSE
Rule 42    Expr -> ID
Rule 43    Expr -> Expr BinOp Expr
Rule 44    Expr -> UnOp Expr
Rule 45    Expr -> ( Expr )
Rule 46    Expr -> ID ( ExprList )
Rule 47    Expr -> READ ( )
Rule 48    BinOp -> +
Rule 49    BinOp -> -
Rule 50    BinOp -> *
Rule 51    BinOp -> DIVIDE
Rule 52    BinOp -> EXP
Rule 53    BinOp -> %
Rule 54    BinOp -> EQUAL
Rule 55    BinOp -> NOTEQUAL
Rule 56    BinOp -> <
Rule 57    BinOp -> >
Rule 58    BinOp -> LESSEQUAL
Rule 59    BinOp -> GREATEREQUAL
Rule 60    BinOp -> AND
Rule 61    BinOp -> OR
Rule 62    UnOp -> -
Rule 63    UnOp -> NOT
Rule 64    ExprList -> empty
Rule 65    ExprList -> ExprList1
Rule 66    ExprList1 -> Expr
Rule 67    ExprList1 -> Expr , ExprList1
Rule 68    VarDecls -> empty
Rule 69    VarDecls -> VarDecl VarDecls
Rule 70    VarDecl -> VAR ID : Type ;
Rule 71    Type -> INTEGER
Rule 72    Type -> BOOL
Rule 73    empty -> <empty>

Terminals, with rules where they appear

%                    : 53
(                    : 8 34 45 46 47
)                    : 8 34 45 46 47
*                    : 50
+                    : 48
,                    : 15 67
-                    : 49 62
:                    : 8 17 29 30 30 31 32 70
;                    : 2 37 70
<                    : 56
=                    : 28
>                    : 57
AND                  : 60
BOOL                 : 10 72
BREAK                : 33
DIVIDE               : 51
ELSE                 : 30
EQUAL                : 54
EXP                  : 52
FALSE                : 41
FOR                  : 32
FUNCTION             : 8
GREATEREQUAL         : 59
ID                   : 2 8 17 28 42 46 70
IF                   : 29 30
INT                  : 39
INTEGER              : 9 71
LESSEQUAL            : 58
NOT                  : 63
NOTEQUAL             : 55
OR                   : 61
PRINT                : 34
PROGRAM              : 2
READ                 : 47
RETURN               : 35
TO                   : 32
TRUE                 : 40
VAR                  : 70
VOID                 : 11
WHILE                : 31
error                : 
{                    : 12 36
}                    : 12 36

Nonterminals, with rules where they appear

BinOp                : 43
Cmd                  : 19 29 30 32 37 38
CmdAtrib             : 20 32
CmdBreak             : 24
CmdFor               : 23
CmdIf                : 21
CmdList              : 12 36 37
CmdPrint             : 25
CmdReturn            : 26
CmdSeq               : 18 27
CmdWhile             : 22
Cmds                 : 3 31
Expr                 : 28 29 30 31 32 35 43 43 44 45 66 67
ExprList             : 34 46
ExprList1            : 65 67
FuncDecls            : 3 5
Function             : 5
FunctionBody         : 7
FunctionHeader       : 6
FunctionType         : 8
Param                : 15 16
ParamList            : 8
ParamList1           : 14 15
Program              : 0
ProgramBody          : 1
ProgramHeader        : 1
Type                 : 17 70
UnOp                 : 44
VarDecl              : 69
VarDecls             : 3 12 69
empty                : 4 13 64 68

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . ProgramHeader ProgramBody
    (2) ProgramHeader -> . PROGRAM ID ;

    PROGRAM         shift and go to state 3

    Program                        shift and go to state 1
    ProgramHeader                  shift and go to state 2

state 1

    (0) S' -> Program .



state 2

    (1) Program -> ProgramHeader . ProgramBody
    (3) ProgramBody -> . FuncDecls VarDecls Cmds
    (4) FuncDecls -> . empty
    (5) FuncDecls -> . Function FuncDecls
    (73) empty -> .
    (6) Function -> . FunctionHeader
    (7) Function -> . FunctionBody
    (8) FunctionHeader -> . FunctionType FUNCTION ID ( ParamList ) :
    (12) FunctionBody -> . { VarDecls CmdList }
    (9) FunctionType -> . INTEGER
    (10) FunctionType -> . BOOL
    (11) FunctionType -> . VOID

  ! shift/reduce conflict for { resolved as shift
    VAR             reduce using rule 73 (empty -> .)
    ID              reduce using rule 73 (empty -> .)
    IF              reduce using rule 73 (empty -> .)
    WHILE           reduce using rule 73 (empty -> .)
    FOR             reduce using rule 73 (empty -> .)
    BREAK           reduce using rule 73 (empty -> .)
    PRINT           reduce using rule 73 (empty -> .)
    RETURN          reduce using rule 73 (empty -> .)
    {               shift and go to state 11
    INTEGER         shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14

  ! {               [ reduce using rule 73 (empty -> .) ]

    ProgramBody                    shift and go to state 4
    FuncDecls                      shift and go to state 5
    empty                          shift and go to state 6
    Function                       shift and go to state 7
    FunctionHeader                 shift and go to state 8
    FunctionBody                   shift and go to state 9
    FunctionType                   shift and go to state 10

state 3

    (2) ProgramHeader -> PROGRAM . ID ;

    ID              shift and go to state 15


state 4

    (1) Program -> ProgramHeader ProgramBody .

    $end            reduce using rule 1 (Program -> ProgramHeader ProgramBody .)


state 5

    (3) ProgramBody -> FuncDecls . VarDecls Cmds
    (68) VarDecls -> . empty
    (69) VarDecls -> . VarDecl VarDecls
    (73) empty -> .
    (70) VarDecl -> . VAR ID : Type ;

    {               reduce using rule 73 (empty -> .)
    ID              reduce using rule 73 (empty -> .)
    IF              reduce using rule 73 (empty -> .)
    WHILE           reduce using rule 73 (empty -> .)
    FOR             reduce using rule 73 (empty -> .)
    BREAK           reduce using rule 73 (empty -> .)
    PRINT           reduce using rule 73 (empty -> .)
    RETURN          reduce using rule 73 (empty -> .)
    VAR             shift and go to state 19

    VarDecls                       shift and go to state 16
    empty                          shift and go to state 17
    VarDecl                        shift and go to state 18

state 6

    (4) FuncDecls -> empty .

    VAR             reduce using rule 4 (FuncDecls -> empty .)
    {               reduce using rule 4 (FuncDecls -> empty .)
    ID              reduce using rule 4 (FuncDecls -> empty .)
    IF              reduce using rule 4 (FuncDecls -> empty .)
    WHILE           reduce using rule 4 (FuncDecls -> empty .)
    FOR             reduce using rule 4 (FuncDecls -> empty .)
    BREAK           reduce using rule 4 (FuncDecls -> empty .)
    PRINT           reduce using rule 4 (FuncDecls -> empty .)
    RETURN          reduce using rule 4 (FuncDecls -> empty .)


state 7

    (5) FuncDecls -> Function . FuncDecls
    (4) FuncDecls -> . empty
    (5) FuncDecls -> . Function FuncDecls
    (73) empty -> .
    (6) Function -> . FunctionHeader
    (7) Function -> . FunctionBody
    (8) FunctionHeader -> . FunctionType FUNCTION ID ( ParamList ) :
    (12) FunctionBody -> . { VarDecls CmdList }
    (9) FunctionType -> . INTEGER
    (10) FunctionType -> . BOOL
    (11) FunctionType -> . VOID

  ! shift/reduce conflict for { resolved as shift
    VAR             reduce using rule 73 (empty -> .)
    ID              reduce using rule 73 (empty -> .)
    IF              reduce using rule 73 (empty -> .)
    WHILE           reduce using rule 73 (empty -> .)
    FOR             reduce using rule 73 (empty -> .)
    BREAK           reduce using rule 73 (empty -> .)
    PRINT           reduce using rule 73 (empty -> .)
    RETURN          reduce using rule 73 (empty -> .)
    {               shift and go to state 11
    INTEGER         shift and go to state 12
    BOOL            shift and go to state 13
    VOID            shift and go to state 14

  ! {               [ reduce using rule 73 (empty -> .) ]

    Function                       shift and go to state 7
    FuncDecls                      shift and go to state 20
    empty                          shift and go to state 6
    FunctionHeader                 shift and go to state 8
    FunctionBody                   shift and go to state 9
    FunctionType                   shift and go to state 10

state 8

    (6) Function -> FunctionHeader .

    {               reduce using rule 6 (Function -> FunctionHeader .)
    INTEGER         reduce using rule 6 (Function -> FunctionHeader .)
    BOOL            reduce using rule 6 (Function -> FunctionHeader .)
    VOID            reduce using rule 6 (Function -> FunctionHeader .)
    VAR             reduce using rule 6 (Function -> FunctionHeader .)
    ID              reduce using rule 6 (Function -> FunctionHeader .)
    IF              reduce using rule 6 (Function -> FunctionHeader .)
    WHILE           reduce using rule 6 (Function -> FunctionHeader .)
    FOR             reduce using rule 6 (Function -> FunctionHeader .)
    BREAK           reduce using rule 6 (Function -> FunctionHeader .)
    PRINT           reduce using rule 6 (Function -> FunctionHeader .)
    RETURN          reduce using rule 6 (Function -> FunctionHeader .)


state 9

    (7) Function -> FunctionBody .

    {               reduce using rule 7 (Function -> FunctionBody .)
    INTEGER         reduce using rule 7 (Function -> FunctionBody .)
    BOOL            reduce using rule 7 (Function -> FunctionBody .)
    VOID            reduce using rule 7 (Function -> FunctionBody .)
    VAR             reduce using rule 7 (Function -> FunctionBody .)
    ID              reduce using rule 7 (Function -> FunctionBody .)
    IF              reduce using rule 7 (Function -> FunctionBody .)
    WHILE           reduce using rule 7 (Function -> FunctionBody .)
    FOR             reduce using rule 7 (Function -> FunctionBody .)
    BREAK           reduce using rule 7 (Function -> FunctionBody .)
    PRINT           reduce using rule 7 (Function -> FunctionBody .)
    RETURN          reduce using rule 7 (Function -> FunctionBody .)


state 10

    (8) FunctionHeader -> FunctionType . FUNCTION ID ( ParamList ) :

    FUNCTION        shift and go to state 21


state 11

    (12) FunctionBody -> { . VarDecls CmdList }
    (68) VarDecls -> . empty
    (69) VarDecls -> . VarDecl VarDecls
    (73) empty -> .
    (70) VarDecl -> . VAR ID : Type ;

    ID              reduce using rule 73 (empty -> .)
    IF              reduce using rule 73 (empty -> .)
    WHILE           reduce using rule 73 (empty -> .)
    FOR             reduce using rule 73 (empty -> .)
    BREAK           reduce using rule 73 (empty -> .)
    PRINT           reduce using rule 73 (empty -> .)
    RETURN          reduce using rule 73 (empty -> .)
    {               reduce using rule 73 (empty -> .)
    VAR             shift and go to state 19

    VarDecls                       shift and go to state 22
    empty                          shift and go to state 17
    VarDecl                        shift and go to state 18

state 12

    (9) FunctionType -> INTEGER .

    FUNCTION        reduce using rule 9 (FunctionType -> INTEGER .)


state 13

    (10) FunctionType -> BOOL .

    FUNCTION        reduce using rule 10 (FunctionType -> BOOL .)


state 14

    (11) FunctionType -> VOID .

    FUNCTION        reduce using rule 11 (FunctionType -> VOID .)


state 15

    (2) ProgramHeader -> PROGRAM ID . ;

    ;               shift and go to state 23


state 16

    (3) ProgramBody -> FuncDecls VarDecls . Cmds
    (18) Cmds -> . CmdSeq
    (19) Cmds -> . Cmd
    (36) CmdSeq -> . { CmdList }
    (20) Cmd -> . CmdAtrib
    (21) Cmd -> . CmdIf
    (22) Cmd -> . CmdWhile
    (23) Cmd -> . CmdFor
    (24) Cmd -> . CmdBreak
    (25) Cmd -> . CmdPrint
    (26) Cmd -> . CmdReturn
    (27) Cmd -> . CmdSeq
    (28) CmdAtrib -> . ID = Expr
    (29) CmdIf -> . IF Expr : Cmd
    (30) CmdIf -> . IF Expr : Cmd ELSE :
    (31) CmdWhile -> . WHILE Expr : Cmds
    (32) CmdFor -> . FOR CmdAtrib TO Expr : Cmd
    (33) CmdBreak -> . BREAK
    (34) CmdPrint -> . PRINT ( ExprList )
    (35) CmdReturn -> . RETURN Expr

    {               shift and go to state 27
    ID              shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    FOR             shift and go to state 38
    BREAK           shift and go to state 39
    PRINT           shift and go to state 40
    RETURN          shift and go to state 41

    Cmds                           shift and go to state 24
    CmdSeq                         shift and go to state 25
    Cmd                            shift and go to state 26
    CmdAtrib                       shift and go to state 28
    CmdIf                          shift and go to state 29
    CmdWhile                       shift and go to state 30
    CmdFor                         shift and go to state 31
    CmdBreak                       shift and go to state 32
    CmdPrint                       shift and go to state 33
    CmdReturn                      shift and go to state 34

state 17

    (68) VarDecls -> empty .

    {               reduce using rule 68 (VarDecls -> empty .)
    ID              reduce using rule 68 (VarDecls -> empty .)
    IF              reduce using rule 68 (VarDecls -> empty .)
    WHILE           reduce using rule 68 (VarDecls -> empty .)
    FOR             reduce using rule 68 (VarDecls -> empty .)
    BREAK           reduce using rule 68 (VarDecls -> empty .)
    PRINT           reduce using rule 68 (VarDecls -> empty .)
    RETURN          reduce using rule 68 (VarDecls -> empty .)


state 18

    (69) VarDecls -> VarDecl . VarDecls
    (68) VarDecls -> . empty
    (69) VarDecls -> . VarDecl VarDecls
    (73) empty -> .
    (70) VarDecl -> . VAR ID : Type ;

    {               reduce using rule 73 (empty -> .)
    ID              reduce using rule 73 (empty -> .)
    IF              reduce using rule 73 (empty -> .)
    WHILE           reduce using rule 73 (empty -> .)
    FOR             reduce using rule 73 (empty -> .)
    BREAK           reduce using rule 73 (empty -> .)
    PRINT           reduce using rule 73 (empty -> .)
    RETURN          reduce using rule 73 (empty -> .)
    VAR             shift and go to state 19

    VarDecl                        shift and go to state 18
    VarDecls                       shift and go to state 42
    empty                          shift and go to state 17

state 19

    (70) VarDecl -> VAR . ID : Type ;

    ID              shift and go to state 43


state 20

    (5) FuncDecls -> Function FuncDecls .

    VAR             reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    {               reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    ID              reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    IF              reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    WHILE           reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    FOR             reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    BREAK           reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    PRINT           reduce using rule 5 (FuncDecls -> Function FuncDecls .)
    RETURN          reduce using rule 5 (FuncDecls -> Function FuncDecls .)


state 21

    (8) FunctionHeader -> FunctionType FUNCTION . ID ( ParamList ) :

    ID              shift and go to state 44


state 22

    (12) FunctionBody -> { VarDecls . CmdList }
    (37) CmdList -> . Cmd ; CmdList
    (38) CmdList -> . Cmd
    (20) Cmd -> . CmdAtrib
    (21) Cmd -> . CmdIf
    (22) Cmd -> . CmdWhile
    (23) Cmd -> . CmdFor
    (24) Cmd -> . CmdBreak
    (25) Cmd -> . CmdPrint
    (26) Cmd -> . CmdReturn
    (27) Cmd -> . CmdSeq
    (28) CmdAtrib -> . ID = Expr
    (29) CmdIf -> . IF Expr : Cmd
    (30) CmdIf -> . IF Expr : Cmd ELSE :
    (31) CmdWhile -> . WHILE Expr : Cmds
    (32) CmdFor -> . FOR CmdAtrib TO Expr : Cmd
    (33) CmdBreak -> . BREAK
    (34) CmdPrint -> . PRINT ( ExprList )
    (35) CmdReturn -> . RETURN Expr
    (36) CmdSeq -> . { CmdList }

    ID              shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    FOR             shift and go to state 38
    BREAK           shift and go to state 39
    PRINT           shift and go to state 40
    RETURN          shift and go to state 41
    {               shift and go to state 27

    CmdList                        shift and go to state 45
    Cmd                            shift and go to state 46
    CmdAtrib                       shift and go to state 28
    CmdIf                          shift and go to state 29
    CmdWhile                       shift and go to state 30
    CmdFor                         shift and go to state 31
    CmdBreak                       shift and go to state 32
    CmdPrint                       shift and go to state 33
    CmdReturn                      shift and go to state 34
    CmdSeq                         shift and go to state 47

state 23

    (2) ProgramHeader -> PROGRAM ID ; .

    {               reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    INTEGER         reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    BOOL            reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    VOID            reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    VAR             reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    ID              reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    IF              reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    WHILE           reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    FOR             reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    BREAK           reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    PRINT           reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)
    RETURN          reduce using rule 2 (ProgramHeader -> PROGRAM ID ; .)


state 24

    (3) ProgramBody -> FuncDecls VarDecls Cmds .

    $end            reduce using rule 3 (ProgramBody -> FuncDecls VarDecls Cmds .)


state 25

    (18) Cmds -> CmdSeq .
    (27) Cmd -> CmdSeq .

  ! reduce/reduce conflict for $end resolved using rule 18 (Cmds -> CmdSeq .)
  ! reduce/reduce conflict for ELSE resolved using rule 18 (Cmds -> CmdSeq .)
  ! reduce/reduce conflict for ; resolved using rule 18 (Cmds -> CmdSeq .)
  ! reduce/reduce conflict for } resolved using rule 18 (Cmds -> CmdSeq .)
    $end            reduce using rule 18 (Cmds -> CmdSeq .)
    ELSE            reduce using rule 18 (Cmds -> CmdSeq .)
    ;               reduce using rule 18 (Cmds -> CmdSeq .)
    }               reduce using rule 18 (Cmds -> CmdSeq .)

  ! $end            [ reduce using rule 27 (Cmd -> CmdSeq .) ]
  ! ELSE            [ reduce using rule 27 (Cmd -> CmdSeq .) ]
  ! ;               [ reduce using rule 27 (Cmd -> CmdSeq .) ]
  ! }               [ reduce using rule 27 (Cmd -> CmdSeq .) ]


state 26

    (19) Cmds -> Cmd .

    $end            reduce using rule 19 (Cmds -> Cmd .)
    ELSE            reduce using rule 19 (Cmds -> Cmd .)
    ;               reduce using rule 19 (Cmds -> Cmd .)
    }               reduce using rule 19 (Cmds -> Cmd .)


state 27

    (36) CmdSeq -> { . CmdList }
    (37) CmdList -> . Cmd ; CmdList
    (38) CmdList -> . Cmd
    (20) Cmd -> . CmdAtrib
    (21) Cmd -> . CmdIf
    (22) Cmd -> . CmdWhile
    (23) Cmd -> . CmdFor
    (24) Cmd -> . CmdBreak
    (25) Cmd -> . CmdPrint
    (26) Cmd -> . CmdReturn
    (27) Cmd -> . CmdSeq
    (28) CmdAtrib -> . ID = Expr
    (29) CmdIf -> . IF Expr : Cmd
    (30) CmdIf -> . IF Expr : Cmd ELSE :
    (31) CmdWhile -> . WHILE Expr : Cmds
    (32) CmdFor -> . FOR CmdAtrib TO Expr : Cmd
    (33) CmdBreak -> . BREAK
    (34) CmdPrint -> . PRINT ( ExprList )
    (35) CmdReturn -> . RETURN Expr
    (36) CmdSeq -> . { CmdList }

    ID              shift and go to state 35
    IF              shift and go to state 36
    WHILE           shift and go to state 37
    FOR             shift and go to state 38
    BREAK           shift and go to state 39
    PRINT           shift and go to state 40
    RETURN          shift and go to state 41
    {               shift and go to state 27

    CmdList                        shift and go to state 48
    Cmd                            shift and go to state 46
    CmdAtrib                       shift and go to state 28
    CmdIf                          shift and go to state 29
    CmdWhile                       shift and go to state 30
    CmdFor                         shift and go to state 31
    CmdBreak                       shift and go to state 32
    CmdPrint                       shift and go to state 33
    CmdReturn                      shift and go to state 34
    CmdSeq                         shift and go to state 47

state 28

    (20) Cmd -> CmdAtrib .

    $end            reduce using rule 20 (Cmd -> CmdAtrib .)
    ;               reduce using rule 20 (Cmd -> CmdAtrib .)
    }               reduce using rule 20 (Cmd -> CmdAtrib .)
    ELSE            reduce using rule 20 (Cmd -> CmdAtrib .)


state 29

    (21) Cmd -> CmdIf .

    $end            reduce using rule 21 (Cmd -> CmdIf .)
    ;               reduce using rule 21 (Cmd -> CmdIf .)
    }               reduce using rule 21 (Cmd -> CmdIf .)
    ELSE            reduce using rule 21 (Cmd -> CmdIf .)


state 30

    (22) Cmd -> CmdWhile .

    $end            reduce using rule 22 (Cmd -> CmdWhile .)
    ;               reduce using rule 22 (Cmd -> CmdWhile .)
    }               reduce using rule 22 (Cmd -> CmdWhile .)
    ELSE            reduce using rule 22 (Cmd -> CmdWhile .)


state 31

    (23) Cmd -> CmdFor .

    $end            reduce using rule 23 (Cmd -> CmdFor .)
    ;               reduce using rule 23 (Cmd -> CmdFor .)
    }               reduce using rule 23 (Cmd -> CmdFor .)
    ELSE            reduce using rule 23 (Cmd -> CmdFor .)


state 32

    (24) Cmd -> CmdBreak .

    $end            reduce using rule 24 (Cmd -> CmdBreak .)
    ;               reduce using rule 24 (Cmd -> CmdBreak .)
    }               reduce using rule 24 (Cmd -> CmdBreak .)
    ELSE            reduce using rule 24 (Cmd -> CmdBreak .)


state 33

    (25) Cmd -> CmdPrint .

    $end            reduce using rule 25 (Cmd -> CmdPrint .)
    ;               reduce using rule 25 (Cmd -> CmdPrint .)
    }               reduce using rule 25 (Cmd -> CmdPrint .)
    ELSE            reduce using rule 25 (Cmd -> CmdPrint .)


state 34

    (26) Cmd -> CmdReturn .
